# CloverPic

./: .gitignore  AGENTS.md  CMakeLists.txt  PRD.md  README.en.md  README.ja.md  README.md  UI.md  build_err.txt
docs/: CoreAdapterAPI.md
src/: main.cpp
src/App/: Application.cpp  Application.h
src/Core/: BlendMode.cpp  BlendMode.h  EditorSession.cpp  EditorSession.h  Filters.cpp  Filters.h  History.cpp  History.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  LayerType.h  MemoryAdvisor.cpp  MemoryAdvisor.h  Project.cpp  Project.h  ProjectIO.cpp  ProjectIO.h  RasterLayer.cpp  RasterLayer.h  RecentFilesManager.cpp  RecentFilesManager.h  SelectionMask.cpp  SelectionMask.h  TextLayer.cpp  TextLayer.h
src/Core/App/: AppCommand.h  AppCommandPayload.h  AppRuntime.cpp  AppRuntime.h  AppSceneBuilder.cpp  AppSceneBuilder.h  AppScreen.h  CanvasController.cpp  CanvasController.h  CommandDispatcher.cpp  CommandDispatcher.h  ModalManager.h  ProjectManagerRuntime.cpp  ProjectManagerRuntime.h  RuntimeSurface.h  ToolType.h  WorkspaceActionController.cpp  WorkspaceActionController.h  WorkspaceEditorFacade.cpp  WorkspaceEditorFacade.h  WorkspaceRuntime.cpp  WorkspaceRuntime.h
src/Core/Document/: EditorSession.cpp  EditorSession.h  Project.cpp  Project.h  ProjectIO.cpp  ProjectIO.h
src/Core/Editing/: Filters.cpp  History.cpp
src/Core/Input/: InputEvents.h
src/Core/Layers/: BlendMode.cpp  BlendMode.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  LayerType.h  RasterLayer.cpp  RasterLayer.h  SelectionMask.cpp  SelectionMask.h  TextLayer.cpp  TextLayer.h
src/Core/Platform/: PlatformInterfaces.h
src/Core/Presentation/: FrameScheduler.cpp  FrameScheduler.h  IconPainter.cpp  IconPainter.h  SoftRenderer.cpp  SoftRenderer.h  UiFrameGraph.cpp  UiFrameGraph.h
src/Core/Render/: BrushEngine.cpp  BrushEngine.h  BrushPreset.h  TilePool.cpp  TilePool.h
src/Core/Services/: CoreServices.cpp  CoreServices.h  MemoryAdvisor.cpp  MemoryAdvisor.h
src/Core/Text/: CoreTextEngine.cpp  CoreTextEngine.h
src/Core/UI/: UiScene.cpp  UiScene.h
src/Core/UI/ProjectManager/: ProjectManagerSceneBuilder.cpp  ProjectManagerSceneBuilder.h
src/Core/UI/ProjectManager/Components/: ProjectManagerComponentBuilder.cpp  ProjectManagerComponentBuilder.h
src/Core/UI/ProjectManager/Interaction/: ProjectManagerKeyInputController.cpp  ProjectManagerKeyInputController.h  ProjectManagerPointerInputController.cpp  ProjectManagerPointerInputController.h
src/Core/UI/ProjectManager/Layout/: ProjectManagerLayout.cpp  ProjectManagerLayout.h
src/Core/UI/ProjectManager/Persistence/: ProjectManagerSettingsPersistence.cpp  ProjectManagerSettingsPersistence.h
src/Core/UI/ProjectManager/Render/: ProjectManagerRenderer.cpp  ProjectManagerRenderer.h
src/Core/UI/ProjectManager/State/: ProjectManagerUiState.cpp  ProjectManagerUiState.h
src/Core/UI/Scene/: UiScene.cpp  UiScene.h
src/Core/UI/Workspace/: WorkspaceLayout.h  WorkspaceUiState.cpp  WorkspaceUiState.h
src/Core/UI/Workspace/Components/: WorkspaceComponentBuilder.cpp  WorkspaceComponentBuilder.h
src/Core/UI/Workspace/Interaction/: WorkspaceInteractionController.cpp  WorkspaceInteractionController.h  (+4 more)
src/Platform/Windows/: RenderBackend.cpp  RenderBackend.h  WindowsCoreServices.cpp  WindowsCoreServices.h  WindowsHost.cpp  WindowsHost.h  WindowsStorageServices.cpp  WindowsStorageServices.h
src/Render/: BrushEngine.cpp  BrushEngine.h  BrushPreset.h  BrushPresetManager.cpp  BrushPresetManager.h  D2DCanvas.cpp  D2DCanvas.h  FontManager.cpp  FontManager.h  RenderBackend.cpp  RenderBackend.h  TilePool.cpp  TilePool.h
src/Resource/Icons/Tabler/: README.md
src/Tablet/: TabletInput.cpp  TabletInput.h
src/UI/Core/: Theme.cpp  Theme.h  ToolType.h  Window.cpp  Window.h
src/UI/Dialogs/: FilterDialog.cpp  FilterDialog.h  TextInputDialog.cpp  TextInputDialog.h
src/UI/Panels/: BrushPanel.cpp  BrushPanel.h  BrushSizePanel.cpp  BrushSizePanel.h  ColorsPanel.cpp  ColorsPanel.h  LayersPanel.cpp  LayersPanel.h  NavigatorPanel.cpp  NavigatorPanel.h  ToolBar.cpp  ToolBar.h
src/UI/Screens/: HomeScreen.cpp  HomeScreen.h  NewCanvasDialog.cpp  NewCanvasDialog.h  Workspace.cpp  Workspace.h
src/UI/Widgets/: Button.cpp  Button.h  CanvasView.cpp  CanvasView.h  ComboBox.cpp  ComboBox.h  ContextMenu.cpp  ContextMenu.h  EditBox.cpp  EditBox.h  Panel.cpp  Panel.h  ScrollView.cpp  ScrollView.h  ToastWindow.cpp  ToastWindow.h  TooltipWindow.cpp  TooltipWindow.h
src/Utils/: Types.h
(+11 files in other folders)
